# cursor_mapper

./: .gitignore  CMakeLists.txt  README.md  app.manifest  vcpkg.json
src/: main.cpp
